--- a/musculação.html
+++ b/musculação.html
@@ -22,7 +22,7 @@
         <div class="sidebar">
             <h2>Veja Também</h2>
             <ul>
-                <li><a href="calistenia.html" aria-label="página da wikipedia sobre calistenia">Calistenia</a></li>
+                <li><a href="index.html" aria-label="página da wikipedia sobre calistenia">Calistenia</a></li>
                 <li><a href="exerciciofisico.html" aria-label="página da wikipedia sobre exercício físico">Exercício Físico</a></li>
             </ul>
             <h2>Conteúdo Relacionado</h2>
@@ -196,4 +196,5 @@
     <p>Página retirada e modificada com base na <a target="_blank" href="https://pt.wikipedia.org/wiki/Muscula%C3%A7%C3%A3o">original</a>, que foi editada pela última vez às 11h59min de 7 de junho de 2023. © Todos os direitos reservados.</p>
 </footer>
 </body>
+
 </html>
