--- a/exerciciofisico.html
+++ b/exerciciofisico.html
@@ -22,7 +22,7 @@
         <div class="sidebar">
             <h2>Veja Também</h2>
             <ul>
-                <li><a href="calistenia.html" aria-label="página da wikipedia sobre Calistenia">Calistenia</a></li>
+                <li><a href="index.html" aria-label="página da wikipedia sobre Calistenia">Calistenia</a></li>
                 <li><a href="musculação.html" aria-label="página da wikipedia sobre musculação">Musculação</a></li>
             </ul>
             <h2>Conteúdo Relacionado</h2>
@@ -131,4 +131,5 @@
     <p>Página retirada e modificada com base na <a target="_blank" href="https://pt.wikipedia.org/wiki/Exerc%C3%ADcio_f%C3%ADsico">original</a>, que foi editada pela última vez às 14h13min de 12 de abril de 2024. © Todos os direitos reservados.</p>
 </footer>
 </body>
+
 </html>
